--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "1883:1883"
       - "9001:9001"
     volumes:
-      - "mosquitto.conf:/mosquitto/config/mosquitto.conf"
+      # - "mosquitto.conf:/mosquitto/config/mosquitto.conf"
       - /mosquitto/data
       - /mosquitto/log
     image: eclipse-mosquitto
