--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "9001:9001"
     volumes:
       # - "mosquitto.conf:/mosquitto/config/mosquitto.conf"
-      - /mosquitto/data
-      - /mosquitto/log
+      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
     image: eclipse-mosquitto
